--- a/ex 4.7
+++ b/ex 4.7
@@ -1,4 +1,4 @@
 F = float(input('Informe uma temperatura em Fahrenheit: '))
 
 C = 5 * (F-32)/9
-print ('{:.2f}'.format(C))
+print ('{:.2f}'.format(C), "Celsius" )
